--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.10.1",
+    "ajv": "^6.12.0",
     "autoprefixer": "9.6.1",
     "babel-core": "6.26.3",
     "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
-    "babel-preset-react-app": "^9.0.0",
+    "babel-preset-react-app": "^9.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "2.4.2",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.4.2",
     "dotenv": "8.0.0",
     "dotenv-expand": "5.1.0",
-    "eslint": ">=6.0.1",
+    "eslint": "^6.8.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "3.11.1",
@@ -27,8 +27,8 @@
     "file-loader": "4.0.0",
     "fs-extra": "8.1.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "^24.8.0",
-    "lodash": "^4.17.14",
+    "jest": "^24.9.0",
+    "lodash": "^4.17.15",
     "merge": ">=1.2.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -36,18 +36,18 @@
     "promise": "8.0.3",
     "prop-types": "^15.7.2",
     "raf": "3.4.1",
-    "react": "^16.8.6",
-    "react-dev-utils": "^9.0.1",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
+    "react": "^16.13.1",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-redux-fetch": "^0.15.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "resolve": "1.11.1",
     "style-loader": "0.23.1",
     "sw-precache-webpack-plugin": "0.11.5",
     "url-loader": "2.0.1",
     "webpack": "4.35.3",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
