--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.12.5",
+    "ajv": "^6.12.6",
     "autoprefixer": "9.6.1",
     "babel-core": "6.26.3",
     "babel-eslint": "10.0.2",
-    "babel-jest": "24.8.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "8.0.6",
     "babel-preset-react-app": "^9.1.2",
     "babel-runtime": "6.26.0",
@@ -27,26 +27,26 @@
     "file-loader": "4.0.0",
     "fs-extra": "8.1.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "^24.9.0",
+    "jest": "^26.6.3",
     "lodash": "^4.17.20",
-    "merge": ">=1.2.1",
+    "merge": "^2.1.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "promise": "8.0.3",
     "prop-types": "^15.7.2",
     "raf": "3.4.1",
-    "react": "^16.13.1",
-    "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react": "^16.14.0",
+    "react-dev-utils": "^11.0.1",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-redux-fetch": "^0.15.0",
     "redux": "^4.0.5",
     "resolve": "1.11.1",
     "style-loader": "0.23.1",
     "sw-precache-webpack-plugin": "1.0.0",
     "url-loader": "2.0.1",
-    "webpack": "4.35.3",
+    "webpack": "^5.11.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
